# rpi-docker

./: .env  .env.example  .gitignore  Dockerfile  README.md  config.json  config.json.example  deploy.py  deploy.sh  docker-compose.yml  minimal_config.json.example  pyproject.toml
cloudflare-dns/: Dockerfile
cron/: Dockerfile
cron/backups/: backup_jellyfin.sh  backup_ocis.sh
cron/cloudflare-dns/: Cargo.toml  cloudflare-dyndns.py  cloudflare-dyndns.sh
cron/cloudflare-dns/src/: lib.rs  main.rs
cron/duplicity/: run_dup_once.sh
duplicity/: Dockerfile
duplicity/duplicity/: credentials  excludes  run.sh  run_dup_once.sh
general/cloudflare_dyndns/src/: lib.rs  main.rs
general/dotenv_writer/: Cargo.toml
general/dotenv_writer/src/: main.rs
homepage/config/: bookmarks.yaml  docker.yaml  services.yaml  settings.yaml  widgets.yaml
jellyfin/: Dockerfile  backup_script.sh
owncloud/: Dockerfile  backup_cron  backup_script.sh
pihole/: 99-forwarders.conf
rclone_plugin/: Dockerfile  config.json  gen_token.sh  install_plugin.sh
socket_proxy/: Dockerfile
traefik/: Dockerfile  traefik.toml
