[package]
name = "cloudflare_dyndns"
version = "0.1.0"
authors = ["Andreas Georgiou <me@ageorgiou.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
dotenv = "0.15.0"
email_address = "0.2.4"
env_logger = "0.10.0"
log = "0.4.17"
openssl = { version="0.10.50", features=["vendored"] }
reqwest = { version="0.11.16", features=["json"] }
serde_json = "1.0.95"
tokio = { version="1.27.0", features=["rt", "macros"] }

[lib]
name = "cf_client"
path = "src/lib.rs"

[[bin]]
name = "cf_dyndns"
path = "src/main.rs"

[dev-dependencies]
mockito = "0.31.1"
tokio-test = "0.4.2"
